texto da pagina inicial e link para requisições

--- a/requisicoes.html
+++ b/requisicoes.html
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" >Início</a>
+                <a class="nav-link" href="./index.html">Início</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./requisicoes.html">Requisições</a>
+                <a class="nav-link active" aria-current="page" >Requisições</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Relatórios</a>
@@ -42,12 +42,12 @@
 
     <div class="container m-4">
       <div class="row">
-        <h1>Bem vindo!</h1>
+        <h1>Requisições</h1>
       </div>
       <div class="row">
         <div class="card m-2">
           <div class="card-body">
-            Este é o módulo de suporte do ERP do sistema acadêmico. Para mais informações e dicas de uso, leia nosso <a href="#">tutorial. </a>
+            Página de requisições
           </div>
       </div>
       
