--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
                 <a class="nav-link" href="./requisicoes.html">Requisições</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Relatórios</a>
+                <a class="nav-link" href="./relatorios.html">Relatórios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Solicitações</a>
+                <a class="nav-link" href="./solicitacoes.html">Solicitações</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Registros</a>
+                <a class="nav-link" href="./registros.html">Registros</a>
               </li>
-              
             </ul>
           </div>
         </div>
