--- a/relatorios.html
+++ b/relatorios.html
@@ -23,10 +23,10 @@
                 <a class="nav-link" href="./index.html">Início</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" >Requisições</a>
+                <a class="nav-link" href="./requisicoes.html">Requisições</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./relatorios.html">Relatórios</a>
+                <a class="nav-link active" aria-current="page">Relatórios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./solicitacoes.html">Solicitações</a>
@@ -42,12 +42,12 @@
 
     <div class="container m-4">
       <div class="row">
-        <h1>Requisições</h1>
+        <h1>Relatórios</h1>
       </div>
       <div class="row">
         <div class="card m-2">
           <div class="card-body">
-            Página de requisições
+            Página de relatórios
           </div>
       </div>
       
