tabelas das páginas (faltando registros) e página de novo relatório

--- a/relatorios.html
+++ b/relatorios.html
@@ -44,10 +44,29 @@
       <div class="row">
         <h1>Relatórios</h1>
       </div>
+      <a href="./novorelatorio.html"><button type="button" class="btn btn-success">Novo</button></a>
       <div class="row">
         <div class="card m-2">
           <div class="card-body">
-            Página de relatórios
+            
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">N°</th>
+                  <th scope="col">Data</th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td scope="row">1</td>
+                  <td>01/01/2024</td>
+                  <td>
+                    <button type="button" class="btn btn-secondary">Visualizar</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
       </div>
       
