--- a/requisicoes.html
+++ b/requisicoes.html
@@ -47,7 +47,29 @@
       <div class="row">
         <div class="card m-2">
           <div class="card-body">
-            Página de requisições
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Data</th>
+                  <th scope="col">Tipo</th>
+                  <th scope="col">Responsável</th>
+                  <th scope="col">Setor</th>
+                  <th scope="col">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td scope="row">01/01/2024</td>
+                  <td>Manutenção</td>
+                  <td>Julia Almeida</td>
+                  <td>Informática</td>
+                  <td>
+                    <button type="button" class="btn btn-success">Aprovar</button>
+                    <button type="button" class="btn btn-danger">Reprovar</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
       </div>
       
