--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -47,7 +47,26 @@
       <div class="row">
         <div class="card m-2">
           <div class="card-body">
-            Página de solicitações
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Data</th>
+                  <th scope="col">Tipo</th>
+                  <th scope="col">Responsável</th>
+                  <th scope="col">Peça/Equipamento</th>
+                  <th scope="col">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td scope="row">01/01/2024</td>
+                  <td>Manutenção</td>
+                  <td>Julia Almeida</td>
+                  <td>Placa de Vídeo</td>
+                  <td class="text-danger">Pendente</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
       </div>
       
