estrutura inicial de todas as páginas

--- a/registros.html
+++ b/registros.html
@@ -47,7 +47,33 @@
       <div class="row">
         <div class="card m-2">
           <div class="card-body">
-            Página de registros
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Data de Expedição</th>
+                  <th scope="col">Data de Conclusão</th>
+                  <th scope="col">Responsável</th>
+                  <th scope="col">Setor</th>
+                  <th scope="col">Peça/Equipamento</th>
+                  <th scope="col">Diagnóstico</th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <!--A parte abaixo repete de acordo com o BD-->
+                <tr>
+                  <td scope="row">01/01/2024</td>
+                  <td>05/03/2024</td>
+                  <td>Julia Almeida</td>
+                  <td>Informática</td>
+                  <td>Notebook</td>
+                  <td>Queima de placa de vídeo</td>
+                  <td>
+                    <a href="./verregistro.html"><button type="button" class="btn btn-secondary">Visualizar</button></a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
       </div>
       
