--- a/requisicoes.html
+++ b/requisicoes.html
@@ -58,6 +58,7 @@
                 </tr>
               </thead>
               <tbody>
+                <!--A parte abaixo repete de acordo com o BD-->
                 <tr>
                   <td scope="row">01/01/2024</td>
                   <td>Manutenção</td>
