--- a/verregistro.html
+++ b/verregistro.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="./requisicoes.html">Requisições</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page">Relatórios</a>
+                <a class="nav-link" href="./relatorios.html">Relatórios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./solicitacoes.html">Solicitações</a>
@@ -42,32 +42,17 @@
 
     <div class="container m-4">
       <div class="row">
-        <h1>Relatórios</h1>
+        <h1>Registro</h1>
       </div>
-      <a href="./novorelatorio.html"><button type="button" class="btn btn-success">Novo</button></a>
       <div class="row">
         <div class="card m-2">
           <div class="card-body">
+            <!--A div abaixo repete de acordo com cada atributo da tabela no BD-->
+            <div>
+              <h3>Atributo</h3>
+              <p>Descrição</p>
+            </div>
             
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">N°</th>
-                  <th scope="col">Data</th>
-                  <th scope="col"></th>
-                </tr>
-              </thead>
-              <tbody>
-                <!--A parte abaixo repete de acordo com o BD-->
-                <tr>
-                  <td scope="row">1</td>
-                  <td>01/01/2024</td>
-                  <td>
-                    <a href="./verrelatorio.html"><button type="button" class="btn btn-secondary">Visualizar</button></a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
           </div>
       </div>
       
